# oomph_lib_superbuild

./: .gitignore  CMakeLists.txt  README.md  test_flags.sh
.github/workflows/: build-on-macos.yaml  build-on-ubuntu.yaml
cmake/: OomphGetExternalCGAL.cmake  OomphGetExternalHYPRE.cmake  OomphGetExternalMUMPS.cmake  OomphGetExternalOpenBLAS.cmake  OomphGetExternalProjectHelper.cmake  OomphGetExternalTrilinos.cmake  OomphMPI.cmake  OomphOptions.cmake  OomphPathOption.cmake  OomphPrintThirdPartyLibrariesUsage.cmake
cmake/patches/: patch_cgal.sh
cmake/scripts/: run_cgal_self_test.sh
